# fontmesh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
benches/: comparison.rs  comprehensive.rs
examples/: basic.rs  buffer_reuse.rs  cjk_export.rs  export_obj.rs  fluent_api.rs  generate_logo.rs  serde.rs
src/: error.rs  extrude.rs  font.rs  glyph.rs  lib.rs  linearize.rs  triangulate.rs  types.rs
tests/: comparison_test.rs
