[package]
name = "fontmesh"
version = "0.2.1"
edition = "2021"
authors = ["Po Hsuan Lai <pohsuanlai0208@gmail.com>"]
license = "MIT"
description = "Pure Rust library for converting TrueType font glyphs to 2D/3D triangle meshes"
repository = "https://github.com/PoHsuanLai/fontmesh"
readme = "README.md"
keywords = ["ttf2mesh", "ttf2mesh-rs", "mesh", "ttf", "triangulation"]
categories = ["graphics", "game-development", "rendering"]
documentation = "https://docs.rs/fontmesh"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ttf-parser = "0.24"
glam = "0.30"
lyon_tessellation = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ttf2mesh = "0.2"
meshtext = "0.3"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[[bench]]
name = "comparison"
harness = false
