[package]
name = "fontmesh"
version = "0.3.3"
edition = "2021"
authors = ["Po Hsuan Lai <pohsuanlai0208@gmail.com>"]
license = "MIT"
description = "Pure Rust library for converting TrueType font glyphs to 2D/3D triangle meshes"
repository = "https://github.com/PoHsuanLai/fontmesh"
readme = "README.md"
keywords = ["ttf2mesh", "ttf2mesh-rs", "mesh", "ttf", "triangulation"]
categories = ["graphics", "game-development", "rendering"]
documentation = "https://docs.rs/fontmesh"
exclude = [
    ".github/",
    "benches/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ttf-parser = "0.24"
glam = { version = "0.30", features = ["fast-math"] }
lyon_tessellation = "1.0"
rustc-hash = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[[bench]]
name = "comprehensive"
harness = false
